[gd_scene load_steps=5 format=3 uid="uid://cy4sbarorkj37"]

[ext_resource type="Script" path="res://MicroGames/MicroGameScripts/microgame_UI.gd" id="1_vntai"]
[ext_resource type="Texture2D" uid="uid://caq1mruwgyx8y" path="res://MicroGames/MicroGameImages/chemical-drop.png" id="2_duklt"]
[ext_resource type="Texture2D" uid="uid://l2ed7rsic4o8" path="res://MicroGames/MicroGameImages/watering-can.png" id="3_dffu5"]
[ext_resource type="Texture2D" uid="uid://p4wv5hiti5g1" path="res://MicroGames/MicroGameImages/scissors.png" id="4_g6mi1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vntai")

[node name="MicroGames" type="CanvasLayer" parent="."]

[node name="pHMicroGame" type="Button" parent="MicroGames"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 500.0
offset_top = -98.0
offset_right = 600.0
offset_bottom = 2.0
grow_vertical = 0
tooltip_text = "pH Game"
icon = ExtResource("2_duklt")
expand_icon = true

[node name="waterMicroGame" type="Button" parent="MicroGames"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -98.0
offset_right = -76.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
tooltip_text = "Watering Game"
icon = ExtResource("3_dffu5")
expand_icon = true

[node name="trimMicroGame" type="Button" parent="MicroGames"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -552.0
offset_top = -98.0
offset_right = -452.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
tooltip_text = "Trimming Game"
icon = ExtResource("4_g6mi1")
expand_icon = true

[connection signal="pressed" from="MicroGames/pHMicroGame" to="." method="_on_p_h_micro_game_pressed"]
[connection signal="pressed" from="MicroGames/waterMicroGame" to="." method="_on_water_micro_game_pressed"]
[connection signal="pressed" from="MicroGames/trimMicroGame" to="." method="_on_trim_micro_game_pressed"]
